improve safety: analyze only new news, robust no-risk filter, kill-switch limits

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ TRADING_MODE=paper
 DRY_RUN=true
 # Optional: override default $40
 INVEST_AMOUNT_USD=40
+# Kill switch / basic risk controls
+MAX_DAILY_TRADES=1
+MIN_SENTIMENT_TO_TRADE=0.3
