add phases, keyword news monitor, and daily account/position snapshots

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,9 @@ INVEST_AMOUNT_USD=40
 # Kill switch / basic risk controls
 MAX_DAILY_TRADES=1
 MIN_SENTIMENT_TO_TRADE=0.3
+
+# Run phase: preopen | postclose | monitor
+RUN_PHASE=preopen
+
+# News keywords (comma-separated, case-insensitive)
+NEWS_KEYWORDS=trump,tariff,china,fed,powell,cpi,inflation,jobs,recession,sanctions,shutdown,ai,nvidia,nvda,tsla,datacenter,data center,gpu,compute,cloud,capex,power,grid,utilities,semiconductor,tsmc,asml
