monitor: append keyword hits to daily qmd news markdown file

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ RUN_PHASE=preopen
 
 # News keywords (comma-separated, case-insensitive)
 NEWS_KEYWORDS=trump,tariff,china,fed,powell,cpi,inflation,jobs,recession,sanctions,shutdown,ai,nvidia,nvda,tsla,datacenter,data center,gpu,compute,cloud,capex,power,grid,utilities,semiconductor,tsmc,asml
+
+# Optional: where to write daily news markdown files (defaults to your qmd folder for this guild/channel)
+# NEWS_MD_DIR=/home/zeke/.openclaw/discord-qmd/1467563842417590416/1467610706932269056/news
