add daily brief generator and cron scripts (news monitor + pre/post market runs)

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,14 @@ NEWS_KEYWORDS=trump,tariff,china,fed,powell,cpi,inflation,jobs,recession,sanctio
 
 # Optional: where to write daily news markdown files (defaults to your qmd folder for this guild/channel)
 # NEWS_MD_DIR=/home/zeke/.openclaw/discord-qmd/1467563842417590416/1467610706932269056/news
+
+# Daily brief markdown output
+# BRIEF_MD_DIR=/home/zeke/.openclaw/discord-qmd/1467563842417590416/1467610706932269056/news/brief
+
+# Email (SMTP) — keep these ONLY in .env (do not commit)
+MAIL_TO=
+MAIL_FROM=
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASS=
