make IB host/port configurable (default 4004) and fix compose port mapping

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ REDDIT_USER_AGENT=
 TWS_USERID=
 TWS_PASSWORD=
 TRADING_MODE=paper
+# IB API connect target (inside docker network)
+IB_HOST=ib-gateway
+# NOTE: this image commonly listens on 4004 (verify in container logs / config)
+IB_PORT=4004
 
 # Trading safety
 DRY_RUN=true
